Fix an issue with z-index

--- a/src/components/freelance-ads/freelance-ads.module.scss
+++ b/src/components/freelance-ads/freelance-ads.module.scss
@@ -9,6 +9,7 @@
     flex-wrap: nowrap;
     align-items: center;
     width: fit-content;
+    z-index: 5;
 
     padding: 1.5rem;
 
